# app-hive

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md
.doxygen/: Doxyfile
.github/workflows/: ci-workflow.yml  codeql-analysis.yml  lint-workflow.yml
doc/: COMMANDS.md
src/: constants.h  crypto.c  crypto.h  globals.c  globals.h  glyphs.c  glyphs.h  io.c  main.c  sw.h  types.h
src/apdu/: dispatcher.c  dispatcher.h  parser.c
src/common/: asn1.c  asn1.h  base58.c  bip32.c  bip32.h  buffer.c  buffer.h  format.c  format.h  macros.h  rng_rfc6979.c  rng_rfc6979.h  signature.c  signature.h  wif.c  wif.h
src/handler/: get_app_name.c  get_public_key.c  get_public_key.h  get_settings.c  get_settings.h  get_version.c  get_version.h  sign_hash.c  sign_hash.h  sign_tx.c  sign_tx.h
src/helper/: send_reponse.c  send_response.h
src/transaction/: decoders.c  decoders.h  parsers.c  parsers.h  transaction_parse.c  transaction_parse.h  types.h
src/ui/: display.c  menu.c  menu.h
src/ui/action/: validate.c  validate.h
src/ui/screens/: confirm_public_key.c  confirm_public_key.h  review_hash.c  review_hash.h  review_transaction.c  review_transaction.h  settings.c  settings.h
test/: .mocharc.yaml  README.md  package-lock.json  package.json  tsconfig.json
test/tests/: apdu.test.ts  getAppName.test.ts  getAppVersion.test.ts  getPublicKey.test.ts  signHash.test.ts  signTransaction.test.ts
test/transactions/: account_create.json  account_update.json  account_witness_proxy.json  account_witness_vote.json  cancel_transfer_from_savings.json  change_recovery_account.json  claim_account.json  claim_reward_balance.json  collateralized_convert.json  comment.json  comment_options.json  convert.json  create_claimed_account.json  create_proposal.json  custom_json.json  decline_voting_rights.json  delegate_vesting_shares.json  delete_comment.json  feed_publish.json  limit_order_cancel.json  limit_order_create.json  recover_account.json  recurrent_transfer.json  remove_proposal.json  request_account_recovery.json  reset_account.json  set_reset_account.json  set_withdraw_vesting_route.json  transfer.json  transfer_from_savings.json  transfer_to_savings.json  transfer_to_vesting.json  update_proposal.json  update_proposal_votes.json  vote.json  withdraw_vesting.json  witness_update.json
test/utils/: speculosButtons.ts
unit-tests/: CMakeLists.txt  gen_coverage.sh  mocks.c  mocks.h
unit-tests/common/: test_asn1.c  test_base58.c  test_bip32.c  test_buffer.c  test_format.c  test_wif.c
unit-tests/transaction/: test_get_operation_parser.c  test_transaction_parse.c
unit-tests/transaction/decoders/: test_decoder_array_of_strings.c  test_decoder_array_of_u64.c  test_decoder_asset.c  test_decoder_authority_type.c  test_decoder_beneficiaries_extensions.c  test_decoder_boolean.c  test_decoder_date_time.c  test_decoder_empty_extensions.c  test_decoder_operation_name.c  test_decoder_optional_authority_type.c  test_decoder_public_key.c  test_decoder_string.c  test_decoder_uint16.c  test_decoder_uint32.c  test_decoder_uint64.c  test_decoder_uint8.c  test_decoder_weight.c
